# rust-axum-boilerplate

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/user/: model.rs  repository.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  logger.rs  main.rs  router.rs
crates/server/src/api/: mod.rs  user_controller.rs
crates/server/src/dtos/: mod.rs  user_dto.rs
crates/server/src/extractors/: mod.rs  validation_extractor.rs
crates/server/src/services/: mod.rs  user_service.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  errors.rs  lib.rs
scripts/: release.sh
