[package]
name = "server"
version = "0.1.0"
edition = "2021"
metadata.workspace = true

[[bin]]
name = "rust-axum-boilerplate"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.1", features = ["cookie"] }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pbkdf2 = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
utils = { path = "../utils" }
validator = { workspace = true }
