[package]
name = "utils"
version = "0.1.0"
edition = "2021"
metadata.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
jsonwebtoken = "9.3.0"
mongodb = { workspace = true }
rust-argon2 = "2.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
